setting up first three lectures

--- a/formath/_toc.yml
+++ b/formath/_toc.yml
@@ -5,4 +5,5 @@ format: jb-book
 root: 00-introduction
 chapters:
 - file: 01-type-theory
-- file: 02-invisible-mathematics
+- file: 02-installation-party
+- file: 03-invisible-mathematics
