--- a/formath/_config.yml
+++ b/formath/_config.yml
@@ -12,8 +12,7 @@ execute:
 
 parse:
   myst_enable_extensions:
-    # don't forget to list any other extensions you want enabled,
-    # including those that are enabled by default!
+    - dollarmath
     - amsmath
 
 # Define the name of the latex output file for PDF builds
@@ -36,3 +35,7 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+sphinx:
+  config:
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
