--- a/formath/_toc.yml
+++ b/formath/_toc.yml
@@ -7,3 +7,4 @@ chapters:
 - file: 01-type-theory
 - file: 02-installation-party
 - file: 03-invisible-mathematics
+- file: 04-first-encounter-with-lean
