Lecture on organizational features

--- a/formath/_toc.yml
+++ b/formath/_toc.yml
@@ -8,3 +8,4 @@ chapters:
 - file: 02-installation-party
 - file: 03-invisible-mathematics
 - file: 04-first-encounter-with-lean
+- file: 05-organizational-features
